spotless and get the build working

--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -13,6 +13,8 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
+      - name: touch local props
+        run: touch local.properties
       - name: run gradle
         run: ./gradlew check
 
