touch local.properties for codeql

--- a/.github/workflows/codeql-daily.yml
+++ b/.github/workflows/codeql-daily.yml
@@ -19,6 +19,9 @@ jobs:
           distribution: temurin
           java-version: 17
 
+      - name: touch local props
+        run: touch local.properties
+
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
