add demo app to ci builds

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,8 @@ jobs:
           java-version: 17
       - name: run gradle check
         run: ./gradlew check
+      - name: build demo app
+        run: ./demo-app/gradlew check
       - name: publish snapshot
         run: ./gradlew publishToSonatype
         env:
