--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -14,7 +14,9 @@ jobs:
           distribution: temurin
           java-version: 17
       - name: touch local props
-        run: touch local.properties
+        run: |
+          touch local.properties
+          touch demo-app/local.properties
       - name: run gradle
         run: ./gradlew check
       - name: build demo app
