remove root local.properties

--- a/.github/workflows/codeql-daily.yml
+++ b/.github/workflows/codeql-daily.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: 17
 
       - name: touch local props
-        run: touch local.properties
+        run: touch demo-app/local.properties
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
