--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,9 +19,7 @@ jobs:
           distribution: temurin
           java-version: 17
       - name: touch local props
-        run: |
-          touch local.properties
-          touch demo-app/local.properties
+        run: touch demo-app/local.properties
       - name: run gradle check
         run: ./gradlew check
       - name: build demo app
