--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -14,9 +14,7 @@ jobs:
           distribution: temurin
           java-version: 17
       - name: touch local props
-        run: |
-          touch local.properties
-          touch demo-app/local.properties
+        run: touch demo-app/local.properties
       - name: run gradle
         run: ./gradlew check
       - name: build demo app
