Add demo app to CI builds (#365)
* add demo app to ci builds

* run from subdir

* add jar

* fixing build

* need to touch the demo local.properties too

* demo app gets its on version catalog

* try and get renovate to chill out in the demo app project

* add name

* scale image down

* more dep updates

* remove root local.properties

* add target sdk for app

* simplify catalog

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -34,8 +34,21 @@
     {
       // somehow renovate gets confused by the android property in gradle.properties,
       // so let's just exclude it and hopefully clean up the dashboard
-      "matchPackageNames": ["string:rum.version"],
+      "matchPackageNames": [
+        "string:rum.version"
+      ],
       "enabled": false
+    },
+    {
+      // Try and force the demo app's kotlin and compose compilers to be in lockstep
+      // See https://github.com/renovatebot/renovate/issues/18354
+      "includePaths": ["demo-app/"],
+      "matchPackagePatterns": [
+        "^org.jetbrains.kotlin",
+        "^com.google.devtools.ksp",
+        "^androidx.compose.compiler"
+      ],
+      "groupName": "kotlin"
     }
   ]
 }
