--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -14,9 +14,12 @@ jobs:
           distribution: temurin
           java-version: 17
       - name: touch local props
-        run: touch local.properties
+        run: touch demo-app/local.properties
       - name: run gradle
         run: ./gradlew check
+      - name: build demo app
+        working-directory: ./demo-app
+        run: ./gradlew check assemble
 
   required-status-check:
     needs:
