--- a/.github/workflows/draft-change-log-entries.yaml
+++ b/.github/workflows/draft-change-log-entries.yaml
@@ -9,4 +9,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run changelog draft script
-        run: sh .github/scripts/draft-change-log-entries.sh
+        run: ./.github/scripts/draft-change-log-entries.sh
