--- a/.github/workflows/draft-change-log-entries.yaml
+++ b/.github/workflows/draft-change-log-entries.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Run changelog draft script
-        run: |
-          chmod +x ./.github/scripts/draft-change-log-entries.sh
-          ./.github/scripts/draft-change-log-entries.sh
+        run: ./.github/scripts/draft-change-log-entries.sh
