--- a/demo-app/gradle/libs.versions.toml
+++ b/demo-app/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 opentelemetry = "1.39.0"
-opentelemetry-alpha = "1.39.0"
+opentelemetry-alpha = "1.39.0-alpha"
 junit = "5.10.2"
 spotless = "6.25.0"
 kotlin = "2.0.0"
