Tell the markdown link checker to ignore this localhost url for jaeger in the demo app.

--- a/.github/scripts/markdown-link-check-config.json
+++ b/.github/scripts/markdown-link-check-config.json
@@ -4,5 +4,9 @@
     200,
     403
   ],
-  "ignorePatterns": []
+  "ignorePatterns": [
+    {
+      "pattern": "^http://localhost:16686$"
+    }
+  ]
 }
