--- a/demo-app/compose.yaml
+++ b/demo-app/compose.yaml
@@ -12,5 +12,6 @@ services:
     image: "jaegertracing/all-in-one:1.59"
     environment:
       - COLLECTOR_OTLP_ENABLED=true
+      - COLLECTOR_OTLP_HTTP_HOST_PORT=0.0.0.0:4318
     ports:
       - "16686:16686" # UI
