--- a/.github/workflows/codeql-daily.yml
+++ b/.github/workflows/codeql-daily.yml
@@ -28,12 +28,14 @@ jobs:
           languages: java
           # using "latest" helps to keep up with the latest Kotlin support
           # see https://github.com/github/codeql-action/issues/1555#issuecomment-1452228433
-          tools: latest
+          tools: linked
 
-      - uses: gradle/gradle-build-action@v3
-        with:
+      - name: Set up gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Assemble
           # skipping build cache is needed so that all modules will be analyzed
-          arguments: assemble --no-build-cache
+        run: ./gradlew assemble --no-build-cache
 
       - name: Perform CodeQL analysis
         uses: github/codeql-action/analyze@v3
