--- a/demo-app/src/main/AndroidManifest.xml
+++ b/demo-app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
             android:label="@string/title_activity_astronomy_shop"
             />
         <activity
+            android:name=".about.AboutActivity"
+            android:exported="true"
+            android:label="AboutActivity"
+            />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
