--- a/demo-app/src/main/AndroidManifest.xml
+++ b/demo-app/src/main/AndroidManifest.xml
@@ -18,9 +18,14 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.shop.AstronomyShopActivity"
+            android:name=".shop.ui.AstronomyShopActivity"
             android:exported="true"
-            android:label="@string/title_activity_astronomy_shop"
+            android:label="Astronomy Shop"
+            />
+        <activity
+            android:name=".about.AboutActivity"
+            android:exported="true"
+            android:label="About OpenTelemetry Android"
             />
         <activity
             android:name=".MainActivity"
