--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,11 @@ jobs:
             prior_version="$major.$minor.$((patch - 1))"
           fi
           inst_version=$(grep ^opentelemetry-alpha gradle/libs.versions.toml | sed -E "s/^.*\"(.*)\"/\1/")
-          sdk_version=$(cat gradle/libs.versions.toml  | grep "^opentelemetry =" | sed -E "s/^.*\"(.*)\"/\1/")
+          # otel-java core libs are transient deps thru instrumentation boms
+          sdk_version=$(./gradlew --console=plain android-agent:dependencies | \
+                        grep 'io.opentelemetry:opentelemetry-api ' | \
+                        sed -e "s/.* -> //" | sed -e "s/ .*//" | \
+                        sort | head -1)
           
           echo "VERSION=$version" >> $GITHUB_ENV
           echo "PRIOR_VERSION=$prior_version" >> $GITHUB_ENV
