--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-opentelemetry-instrumentation = "2.9.0"
 opentelemetry-instrumentation-alpha = "2.9.0-alpha"
+#opentelemetry-instrumentation = "2.9.0" // alpha bom includes non-alpha bom
 opentelemetry-semconv = "1.25.0-alpha"
 opentelemetry-contrib = "1.40.0-alpha"
 mockito = "5.14.2"
@@ -14,8 +14,8 @@ junitKtx = "1.2.1"
 autoService = "1.1.1"
 
 [libraries]
-opentelemetry-platform = { module = "io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom", version.ref = "opentelemetry-instrumentation" }
 opentelemetry-platform-alpha = { module = "io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha", version.ref = "opentelemetry-instrumentation-alpha" }
+opentelemetry-platform = { module = "io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom" }
 androidx-navigation-fragment = "androidx.navigation:navigation-fragment:2.7.7"
 androidx-core = "androidx.core:core:1.13.1"
 androidx-lifecycle-process = "androidx.lifecycle:lifecycle-process:2.8.6"
