--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -72,6 +72,12 @@
         "^androidx.lifecycle"
       ],
       "groupName": "androidx.lifecycle"
+    },
+    {
+      "matchPackagePatterns": [
+        "^androidx.core"
+      ],
+      "groupName": "androidx.core"
     }
   ]
 }
