add build scans to help troubleshoot slow PR build times.

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -78,6 +78,10 @@
         "^androidx.core"
       ],
       "groupName": "androidx.core"
+    },
+    {
+      "matchPackagePrefixes": ["com.gradle.develocity"],
+      "groupName": "gradle develocity packages"
     }
   ]
 }
