add rule to skip updates

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -56,6 +56,12 @@
       "enabled": false
     },
     {
+      matchPackageNames: [
+        "com.toasttab.android:gummy-bears-api-21"
+      ],
+      enabled: false
+    },
+    {
       // Try and force the demo app's kotlin and compose compilers to be in lockstep
       // See https://github.com/renovatebot/renovate/issues/18354
       "includePaths": ["demo-app/"],
