--- a/.clomonitor.yml
+++ b/.clomonitor.yml
@@ -1,3 +1,3 @@
 exemptions:
   - check: artifacthub_badge
-    reason: "Artifact Hub doesn't support Java packages"
+    reason: "Artifact Hub doesn't support Android packages"
