group patch PRs to lower thrash

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -108,6 +108,11 @@
     {
       "matchPackagePrefixes": ["com.gradle.develocity"],
       "groupName": "gradle develocity packages"
+    },
+    {
+      "groupName": "all patch versions",
+      "matchUpdateTypes": ["patch"],
+      "schedule": ["before 8am every weekday"]
     }
   ]
 }
