update bad locations and don't fail link check for them

--- a/.github/scripts/markdown-link-check-config.json
+++ b/.github/scripts/markdown-link-check-config.json
@@ -7,6 +7,9 @@
   "ignorePatterns": [
     {
       "pattern": "^http://localhost:16686$"
+    },
+    {
+      "pattern": "^https://maven-badges.sml.io/maven-central/io.opentelemetry.android/.*$"
     }
   ]
 }
