demo app collector can receive metrics for debug

--- a/demo-app/collector.yaml
+++ b/demo-app/collector.yaml
@@ -18,6 +18,9 @@ service:
     traces:
       receivers: [otlp]
       exporters: [debug/detailed, otlphttp]
+    metrics:
+      receivers: [otlp]
+      exporters: [debug/detailed]
     logs:
       receivers: [otlp]
       exporters: [debug/detailed]
