group androidx.test and upgrade

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -106,6 +106,12 @@
       "groupName": "androidx.core"
     },
     {
+      "matchPackagePatterns": [
+        "^androidx.test"
+      ],
+      "groupName": "androidx.test"
+    },
+    {
       "matchPackagePrefixes": ["com.gradle.develocity"],
       "groupName": "gradle develocity packages"
     },
